# DataStructuresAndAlgorithms

./: .gitignore  README.md
Seminar1/DemocracyInDanger/: CMakeLists.txt  main.cpp
Seminar1/StudentDisciplines/: CMakeLists.txt  ElectiveDiscipline.cpp  ElectiveDiscipline.h  Student.cpp  Student.h  main.cpp
Seminar1/StudentDisciplines/Tests/: ElectiveDisciplinesExtended.cpp  ElectiveDisciplinesExtended.h  unitTests.cpp
Seminar2/ReversePolishNotation/: CMakeLists.txt  main.cpp
Seminar2/StringCompressed/: CMakeLists.txt  main.cpp
Seminar3/HorseChess/: CMakeLists.txt  main.cpp
